fixed page overflow when priting

--- a/style.css
+++ b/style.css
@@ -53,6 +53,7 @@
     margin: 0 auto;
     margin-bottom: 0.5cm;
     box-shadow: 0 0 0.5cm rgba(0, 0, 0, 0.5);
+    overflow: hidden;
 }
 
 #pageContainer[size="A4"] {
